[package]
name = "pds_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
#actix-web = { version = "4.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rusqlite = "0.33.0"
actix-web-actors = "4.0"
