[package]
name = "pds_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rusqlite = "0.33.0"
simplelog = "0.12.2"
log = "0.4"  # Add this line
actix-files = "0.6"
serde_json = "1.0"
actix-web-actors = "4.0"
